--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">SharedPreferences</string>
     <string name="save">Сохрнаить</string>
+    <string name="name">MyNote</string>
+    <string name="saved_info">Данные сохранены</string>
 </resources>
